tests/snapshots/ast/parser_05_4_pratt_evaluation_2__harness__helpers__test_precedence_complex_expression_integration.snap
---
source: tests/harness/helpers.rs
expression: parse_to_ast(input)
---
stmts:
  - Let:
      name: a
      kind: MutableStatic
      value:
        Binary:
          left:
            Binary:
              left:
                Binary:
                  left:
                    Binary:
                      left:
                        Binary:
                          left:
                            Unary:
                              op: Neg
                              expr:
                                Call:
                                  callee:
                                    Member:
                                      target:
                                        Var: b
                                      field: c
                                  args: []
                          op: Power
                          right:
                            Var: d
                      op: Mul
                      right:
                        Var: e
                  op: Add
                  right:
                    Var: f
              op: Eq
              right:
                Var: g
          op: And
          right:
            Var: h
expr: ~
