tests/snapshots/ast/parser_05_4_pratt_evaluation_2__harness__helpers__test_precedence_power_vs_multiplication.snap
---
source: tests/harness/helpers.rs
expression: parse_to_ast(input)
---
stmts:
  - ExprStmt:
      expr:
        Binary:
          left:
            Binary:
              left:
                Var: a
              op: Power
              right:
                Var: b
          op: Mul
          right:
            Var: c
expr:
  Binary:
    left:
      Binary:
        left:
          Var: a
        op: Power
        right:
          Var: b
    op: Mul
    right:
      Var: c
