tests/snapshots/ast/parser_05_4_pratt_evaluation_2__harness__helpers__test_precedence_unary_vs_power_1.snap
---
source: tests/harness/helpers.rs
expression: parse_to_ast(input)
---
stmts:
  - ExprStmt:
      expr:
        Binary:
          left:
            Unary:
              op: Neg
              expr:
                Var: a
          op: Power
          right:
            Var: b
expr:
  Binary:
    left:
      Unary:
        op: Neg
        expr:
          Var: a
    op: Power
    right:
      Var: b
