tests/snapshots/ast/parser_05_4_pratt_evaluation_2__harness__helpers__test_precedence_unary_vs_power_2.snap
---
source: tests/harness/helpers.rs
expression: parse_to_ast(input)
---
stmts:
  - ExprStmt:
      expr:
        Binary:
          left:
            Var: a
          op: Power
          right:
            Unary:
              op: Neg
              expr:
                Var: b
expr:
  Binary:
    left:
      Var: a
    op: Power
    right:
      Unary:
        op: Neg
        expr:
          Var: b
program:
  stmts: []
